--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="container container-body">
-      <div class="container-center">
-        <button type="submit" onclick="getQuote(api_url)">Inspirational Quote</button>
-        <i class="fas fa-quote-left"></i>
-        <p id="quote"></p>
-        <i class="fas fa-quote-right"></i>
-        <p id="author"></p>
-      </div>
+  <div class="container">
+    <button type="submit" onclick="getQuote(api_url)">Inspirational Quote</button>
+    <i class="fas fa-quote-left"></i>
+    <p id="quote"></p>
+    <i class="fas fa-quote-right"></i>
+    <p id="author"></p>
   </div>
 
   <script type="text/javascript">
