--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <body>
   <div class="container">
     <button type="submit" onclick="getQuote(api_url)">Inspirational Quote</button>
-    <i class="fas fa-quote-left"></i>
-    <p id="quote"></p>
-    <i class="fas fa-quote-right"></i>
-    <p id="author"></p>
+    <div class="quote">
+      <i class="fas fa-quote-left"></i>
+      <p id="quote"></p>
+      <i class="fas fa-quote-right"></i>
+      <p id="author"></p>
+    </div>
   </div>
 
   <script type="text/javascript">
