--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container">
-    <button type="submit" onclick="getQuote(api_url)">Inspirational Quote</button>
+    <button class="btn" type="submit" onclick="getQuote(api_url)">Inspirational Quote</button>
     <div class="quote">
       <i class="fas fa-quote-left"></i>
       <p id="quote"></p>
